WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74222
Fix assertion failure in ScrollAnimatorMac
https://bugs.webkit.org/show_bug.cgi?id=74222
Summary
Fix assertion failure in ScrollAnimatorMac
Anders Carlsson
Reported
2011-12-09 15:15:27 PST
Fix assertion failure in ScrollAnimatorMac
Attachments
Patch
(1.86 KB, patch)
2011-12-09 15:16 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-12-09 15:16:10 PST
Created
attachment 118654
[details]
Patch
Anders Carlsson
Comment 2
2011-12-09 15:21:21 PST
Committed
r102478
: <
http://trac.webkit.org/changeset/102478
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug