Fix assertion failure in ScrollAnimatorMac https://bugs.webkit.org/show_bug.cgi?id=74222

Reviewed by Andreas Kling.

* platform/mac/ScrollAnimatorMac.mm:
(-[WebScrollbarPainterControllerDelegate scrollerImpPair:convertContentPoint:toScrollerImp:]):
This can be called with a nil scrollerImp, just return NSZeroPoint when that happens.

git-svn-id: svn://svn.chromium.org/blink/trunk@102478 bbb929c8-8fbe-4397-9dbb-9b2b20218538